force-app/main/default/objects/Invoice_Statement__c/Invoice_Statement__c.object-meta.xml
<CustomObject>
    <description>WAREHOUSE Description Of Invoice Statement</description>
    <label>Invoice Statement</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>