force-app/main/default/objects/Invoice_Statement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Des of on Voice</description>
    <inlineHelpText>...........................</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>