force-app/main/default/objects/Invoice_Statement__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Des of Invoice Number</description>
    <displayFormat>IN-{000000}</displayFormat>
    <inlineHelpText>.....................................</inlineHelpText>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>