force-app/main/default/objects/Invoice_Statement__c/fields/Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Value__c</fullName>
    <description>Total Price Of Invoice</description>
    <inlineHelpText>...................................</inlineHelpText>
    <label>Invoice Value</label>
    <summarizedField>Line_Item__c.Value__c</summarizedField>
    <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>